--- a/build.gradle
+++ b/build.gradle
@@ -13,41 +13,38 @@ buildscript {
     }
 }
 
+group 'it.crowd'
+version '1.0-SNAPSHOT'
+
 repositories {
-    jcenter()
     mavenLocal()
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
     liquibaseRuntime 'org.liquibase:liquibase-gradle-plugin:2.0.1'
+    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.0.2'
     liquibaseRuntime 'org.liquibase:liquibase-core:3.6.3'
-    liquibaseRuntime group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
+    liquibaseRuntime group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+    liquibaseRuntime group: 'net.sourceforge.jtds', name: 'jtds', version: '1.3.1'
 }
-
-def changelog = './liquibase/changelog-master.xml'
-def dbUser = 'UserDb'
-def dbPassword = 'UserPwd#'
 
 
 liquibase {
     activities {
         mainClassName 'org.liquibase.gradle.OutputEnablingLiquibaseRunner'
         dev {
-            changeLogFile changelog
-            url 'jdbc:mysql://localhost:3506/liquibase?useSSL=false'
-            username dbUser
-            password dbPassword
+            driver 'com.mysql.cj.jdbc.Driver'
+            changeLogFile changeLogFileDev
+            url "jdbc:mysql://localhost:3306/${targetDevDB}?allowPublicKeyRetrieval=true&useSSL=false"
+        }
 
+        test{
+            driver 'com.mysql.cj.jdbc.Driver'
+            changeLogFile changeLogFileTest
+            url "jdbc:mysql://localhost:3306/${targetTestDB}?allowPublicKeyRetrieval=true&useSSL=false"
         }
-    /*        
-    prod {
-            changeLogFile changelog
-            url 'jdbc:jtds:sybase://localhost:5000/liquibase'
-            username 'fvera'
-            password 'f3rv3r4'
-        }
-    */
     }
-    runList = 'dev'
+    runList = project.ext.runList
 }
