--- a/database/docker/charset.cnf
+++ b/database/docker/charset.cnf
@@ -1,8 +1,8 @@
 [mysqld]
 character-set-client-handshake=FALSE
-character-set-server = utf8
-collation-server = utf8_unicode_ci
+character-set-server = utf8mb4
+collation-server = utf8mb4_unicode_ci
 [client]
-default-character-set=utf8
+default-character-set=utf8mb4
 [mysql]
-default-character-set=utf8
+default-character-set=utf8mb4
